# rl-developer-memory

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  install.sh  pyproject.toml  pyrightconfig.json  requirements.txt
.codex-plugin/: plugin.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
EXAMPLES/: README.md  run_rl_scenarios.py  scenario_manifest.json
EXAMPLES/results/: rl_scenarios_metrics.json  rl_scenarios_summary.md
EXAMPLES/scenarios/: actor_critic_buggy.py  gae_terminal_mask_buggy.py  q_learning_fixed.py
ISSUE_TEMPLATE/: bug_report.md
config/: install.env
configs/: rl_backbone.active.example.json  rl_backbone.active.toml  rl_backbone.shadow.json  rl_backbone.shadow.toml
docs/: ARCHITECTURE.md  CODEX_MAIN_CONVERSATION_OWNERSHIP.md  CODEX_RL_AGENT_OPERATING_MODEL.md  COMPATIBILITY.md  CONFIGURATION.md  DEPENDENCIES.md  DEVELOPMENT.md  INSTALLATION.md  MCP_RL_INTEGRATION_POLICY.md  MEMORY_SCOPE_OPERATIONS_NOTE.md  OPERATIONS.md  ORCHESTRATION_STDLIO_REUSE_CHECKLIST.md  README.md  RL_BACKBONE.md  RL_CODING_STANDARDS.md  RL_QUALITY_GATE.md  ROLLOUT.md  SKILL_INSTALL_SYNC.md  THEORY_TO_CODE.md  USAGE.md  VALIDATION_MATRIX.md  theory_to_code.md
docs/operations/: AUTO_TRIGGER_PROOF_PROTOCOL.md
docs/releases/: v0.1.0.md
examples/: README.md  __init__.py  run_rl_scenarios.py  scenario_manifest.json
examples/results/: rl_scenarios_metrics.json  rl_scenarios_summary.md
examples/scenarios/: __init__.py  actor_critic_fixed.py  dqn_target_network_buggy.py  n_step_return_buggy.py  ppo_clip_objective_buggy.py  q_learning_buggy.py  sac_alpha_sign_buggy.py  td3_policy_delay_buggy.py  td3_target_smoothing_buggy.py  vtrace_importance_weights_buggy.py
reports/: 00_execution_trace.md  01_lock_analysis.md  02_lifecycle_breakpoints.md  03_root_cause_proof.md  04_design_spec.md  05_patch_map.md  06_lifecycle_changes.md  07_test_results.md  08_runtime_proof.md
scripts/: e2e_mcp_reuse_harness.py  eval_rl_backbone.py  install_cron.sh  install_skill.py  install_skill.sh  register_codex.py  release_acceptance.py  release_readiness.py  rl_quality_gate.py  run_backup.sh  run_rl_backbone_smoke.py  train_rl_backbone.py  validate_plugin_distribution.py  validate_theory_code_sync.py  verify_install.sh
skills/rl-developer-memory-self-learning/: SKILL.md  cases.json  skill.spec.yaml
skills/rl-developer-memory-self-learning/agents/: openai.yaml
skills/rl-developer-workflow/: SKILL.md  cases.json  skill.spec.yaml
skills/rl-developer-workflow/agents/: openai.yaml
src/rl_developer_memory/: __init__.py  app.py  backup.py  e2e_mcp_reuse_harness.py  lifecycle.py  maintenance.py  matching.py  mcp_reuse_harness.py  migrations.py  models.py  quality_checks.py  quality_gate.py  release_acceptance.py  release_checks.py  release_readiness.py  security.py  server.py  settings.py  skill_bundle_sync.py  skill_sync.py  storage.py
src/rl_developer_memory/agents/: __init__.py  base.py
src/rl_developer_memory/algorithms/: __init__.py  base.py  catalog.py
src/rl_developer_memory/benchmarks/: __init__.py  calibration.py  dense_bandit.py  failure_taxonomy.py  hard_negatives.py  merge_stress.py  real_world_eval.py  rl_control_reporting.py  user_domains.py
src/rl_developer_memory/buffers/: __init__.py  base.py
src/rl_developer_memory/callbacks/: __init__.py  base.py
src/rl_developer_memory/domains/: __init__.py
src/rl_developer_memory/envs/: __init__.py  base.py
src/rl_developer_memory/evaluation/: __init__.py  base.py
src/rl_developer_memory/experiments/: __init__.py  checkpoints.py  config.py  memory_bridge.py  metrics.py  recovery.py  runner.py
src/rl_developer_memory/learning/: __init__.py  (+3 more)
templates/: codex_config.rl_developer_memory.active.example.toml  codex_config.rl_developer_memory.shadow.example.toml  project_AGENTS.example.md  rl_developer_memory.plugin-wrapper-example.md
tests/: test_abstention.py  test_classification_regressions.py  test_decision_and_search.py  test_dense_retrieval_bandit.py  test_e2e_mcp_reuse_harness.py  test_failure_taxonomy_benchmark.py  test_feedback_learning.py  test_hard_case_regressions.py  test_matching.py  test_migrations.py  test_owner_key_parent_env_fallback.py  test_phase5_ops.py  test_phase6_benchmarks.py  test_phase6_calibration_ops.py  test_phase6_rl_audit_ops.py  test_phase6_rl_benchmarks.py  test_phase6_server_lifecycle.py  test_phase8_rollout.py  test_preferences_guardrails.py  test_register_codex.py  test_release_acceptance.py  test_rl_control_audit_hardening.py  test_rl_control_promotion_review.py  test_rl_control_reporting_surface.py  test_rl_control_retrieval_audit.py  test_rl_control_storage_integration.py  test_rl_control_validators.py  test_runtime_diagnostics.py  test_session_memory.py  test_session_memory_scoping.py  test_strategy_bandit_shadow_mode.py  test_user_domain_benchmark.py  test_validate_plugin_distribution.py  test_variant_first_hybrid.py  test_variant_split_merge.py
tests/integration/: test_examples_rl_scenarios.py  test_experiment_promotion_e2e.py  test_experiment_runner_to_rl_control_payload.py  test_trainer_checkpoint_resume_flow.py  test_trainer_runtime_recovery.py
tests/regression/: test_checkpoint_resume_regression.py  test_linux_db_path_guard.py  test_seed_determinism.py  test_theorem_code_sync_regression.py
tests/smoke/: test_rl_backbone_smoke.py  test_train_eval_entrypoints.py
tests/unit/: test_agents.py  test_algorithm_specs.py  test_backup.py  test_buffers.py  test_callbacks.py  test_config_schemas.py  test_envs.py  test_evaluation.py  test_networks.py  test_normalizer.py  test_numeric_guards.py  test_posteriors.py  test_priority_buffer.py  test_quality_gate.py  test_schedules.py  test_security.py  test_skill_sync.py  test_theory_blueprint.py  test_theory_registry.py  test_theory_validators.py  test_training_stability_components.py
(+90 files in other folders)
