[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-developer-memory"
version = "0.1.0"
description = "Local self-learning RL developer memory MCP server for Codex"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["codex", "mcp", "sqlite", "debugging", "developer-tools", "agent-memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp[cli]>=1.0.0,<2.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pyright>=1.1.380",
  "ruff>=0.6.0",
]

[project.scripts]
rl-developer-memory-maint = "rl_developer_memory.maintenance:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rl_developer_memory = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
