[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-developer-memory"
version = "0.1.0"
description = "Local-first MCP server for reusable debugging memory and RL/control-aware developer workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Mehmet" },
]
keywords = ["codex", "mcp", "sqlite", "debugging", "developer-tools", "agent-memory", "reinforcement-learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp[cli]>=1.0.0,<2.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0.0",
  "pyright>=1.1.380",
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/PhiniteLab/rl-developer-memory"
Repository = "https://github.com/PhiniteLab/rl-developer-memory"
Documentation = "https://github.com/PhiniteLab/rl-developer-memory/tree/main/docs"
Issues = "https://github.com/PhiniteLab/rl-developer-memory/issues"
Changelog = "https://github.com/PhiniteLab/rl-developer-memory/blob/main/CHANGELOG.md"
Releases = "https://github.com/PhiniteLab/rl-developer-memory/releases"
Security = "https://github.com/PhiniteLab/rl-developer-memory/security/policy"
Support = "https://github.com/PhiniteLab/rl-developer-memory/blob/main/SUPPORT.md"

[project.scripts]
rl-developer-memory-maint = "rl_developer_memory.maintenance:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rl_developer_memory = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
