[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-developer-memory"
version = "0.1.0"
description = "Local-first MCP server for reusable debugging memory and RL/control-aware developer workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Mehmet" },
]
keywords = ["codex", "mcp", "sqlite", "debugging", "developer-tools", "agent-memory", "reinforcement-learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp[cli]>=1.0.0,<2.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "pyright>=1.1.380",
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/PhiniteLab/rl-developer-memory"
Repository = "https://github.com/PhiniteLab/rl-developer-memory"
Documentation = "https://github.com/PhiniteLab/rl-developer-memory/tree/main/docs"
Issues = "https://github.com/PhiniteLab/rl-developer-memory/issues"
Changelog = "https://github.com/PhiniteLab/rl-developer-memory/blob/main/CHANGELOG.md"
Releases = "https://github.com/PhiniteLab/rl-developer-memory/releases"
Security = "https://github.com/PhiniteLab/rl-developer-memory/security/policy"
Support = "https://github.com/PhiniteLab/rl-developer-memory/blob/main/SUPPORT.md"

[project.scripts]
rl-developer-memory-maint = "rl_developer_memory.maintenance:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rl_developer_memory = ["sql/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["rl_developer_memory"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
fail_under = 60

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PERF", "RUF"]
ignore = [
    "E501",
    "UP035",   # deprecated-import — keep for py310 compat
    "SIM105",  # suppressible-exception — contextlib.suppress not always clearer
    "SIM108",  # if-else-block-instead-of-if-exp — complex ternaries hurt readability
    "PERF203", # try-except-in-loop — moving out of loop changes error-handling semantics
    "RUF001",  # ambiguous-unicode — false positives on Turkish text
    "RUF007",  # zip-instead-of-pairwise — itertools.pairwise requires py3.10+
    "RUF009",  # function-call-in-dataclass-default — intentional factory defaults
    "RUF012",  # mutable-class-default — dataclass pattern is fine
    "RUF059",  # unused-unpacked-variable — intentional destructuring in tests
    "SIM117",  # multiple-with-statements — nested async with is clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False is fine in tests
